# last-traffic-management

./: CMakeLists.txt
include/: HelmetDetector.h  LicensePlateDetector.h  VehicleDetector.h
python_scripts/: helmet_detect.py  license_plate_detector.py  vehicle_detector.py
src/: HelmetDetector.cpp  LicensePlateDetector.cpp  VehicleDetector.cpp  main.cpp
